# LoopHole

./: .env.example  .gitignore  .mcp.json  HANDOFF_person3.md  README.md  pyproject.toml
dashboard/: .gitignore  CONTRACT_eval_output.md  CONTRACT_verdict_sidecar.md  README.md  __init__.py  __main__.py  interactive.py  loader.py  model.py  pyproject.toml  render.py
dashboard/fixtures/: eval_results.jsonl  generate_money_shot.py  verdicts.jsonl
dashboard/fixtures/traces/: buggy-resource-001.json  buggy-routing-002.json  clean-003.json  date_range_boundary__live_000.json  date_range_boundary__live_000__resource_misuse.json  date_range_boundary__live_000__routing.json  date_range_boundary__live_000__tool_misuse.json  date_range_boundary__live_001.json  date_range_boundary__live_001__resource_misuse.json  date_range_boundary__live_001__routing.json  date_range_boundary__live_001__tool_misuse.json  date_range_boundary__live_002__resource_misuse.json  date_range_boundary__live_002__routing.json  date_range_boundary__live_002__tool_misuse.json
dashboard/tests/: test_interactive.py  test_loader.py  test_main_fallback.py  test_model.py  test_render.py
envs/loop_auditor_env/: Dockerfile.hud  README.md  __init__.py  accounting.py  agent.py  artifacts.py  citation_gate.py  config.py  diagnostics.py  env.py  eval_harness.py  fix_grader.py  judge.py  pyproject.toml  reward.py  rich_loader.py  scenarios.py  self_improve.py  serialize.py  tasks.py  tools.py  train.py  verdict.py
envs/loop_auditor_env/fixtures/: .gitkeep  buggy_resource_misuse.json  buggy_routing.json  clean_trace.json
envs/loop_auditor_env/live/: heldout.jsonl  train.jsonl
envs/loop_auditor_env/rich/: heldout.jsonl  train.jsonl
envs/loop_auditor_env/rich_cases/config_bool/clean/: trace.jsonl
envs/loop_auditor_env/rich_cases/config_bool/routing/: agent_transcript.md
envs/loop_auditor_env/rich_cases/config_bool/tool_misuse/: agent_transcript.md  trace.jsonl
envs/loop_auditor_env/rich_cases/config_bool/wrong_file_edit/: agent_transcript.md
envs/loop_auditor_env/rich_cases/csv_header/clean/: trace.jsonl
envs/loop_auditor_env/rich_cases/csv_header/routing/: trace.jsonl
envs/loop_auditor_env/rich_cases/csv_header/tool_misuse/: agent_transcript.md
envs/loop_auditor_env/rich_cases/csv_header/wrong_file_edit/: trace.jsonl
envs/loop_auditor_env/rich_cases/duration/clean/: agent_transcript.md
envs/loop_auditor_env/rich_cases/duration/resource_misuse/: agent_transcript.md  trace.jsonl
envs/loop_auditor_env/rich_cases/duration/routing/: trace.jsonl
envs/loop_auditor_env/rich_cases/duration/tool_misuse/: agent_transcript.md  trace.jsonl
envs/loop_auditor_env/rich_cases/duration/wrong_file_edit/: trace.jsonl
envs/loop_auditor_env/rich_cases/ini_parser/clean/: trace.jsonl
envs/loop_auditor_env/rich_cases/ini_parser/resource_misuse/: trace.jsonl
envs/loop_auditor_env/rich_cases/ini_parser/tool_misuse/: agent_transcript.md  trace.jsonl
envs/loop_auditor_env/rich_cases/inventory_total/clean/: agent_transcript.md
envs/loop_auditor_env/rich_cases/inventory_total/resource_misuse/: agent_transcript.md
envs/loop_auditor_env/rich_cases/inventory_total/tool_misuse/: agent_transcript.md  trace.jsonl
envs/loop_auditor_env/rich_cases/inventory_total/wrong_file_edit/: trace.jsonl
envs/loop_auditor_env/rich_cases/url_join/clean/: trace.jsonl  (+1 more)
envs/loop_auditor_env/schemas/: reward_spec.json  verdict.json
envs/loop_auditor_env/scripts/: analyze_eval_failures.py  run_many.py  vendor_live.py  vendor_rich.py
envs/loop_auditor_env/tests/: .gitkeep  conftest.py  test_accounting.py  test_agent.py  test_artifacts.py  test_audit_env.py  test_citation_gate.py  test_dataset.py  test_diagnostics.py  test_eval_harness.py  test_fix_grader.py  test_gate_env.py  test_gate_reward.py  test_gate_task.py  test_live_dataset.py  test_reward.py  test_rich_loader.py  test_run_many.py  test_scenarios.py  test_self_improve.py  test_serialize.py  test_tasks.py  test_tool_descriptions.py  test_tools.py  test_tools_extra.py  test_train.py  test_verdict.py
training/: .gitignore  README.md  backends.py  base_eval.py  live_eval.py  modal_infer.py  prompt.py  pyproject.toml  run_base_eval.py  scoring.py
training/tests/: test_base_eval.py  test_live_eval.py  test_run_base_eval.py  test_scoring.py
(+384 files in other folders)
