[project]
name = "loophole"
version = "0.0.0"
description = "Loop-Auditor RL environment (HUD)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "hud-python>=0.6",
    "anthropic>=0.40",
    "jsonschema>=4.0",
    "modal>=1.5.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["envs"]
testpaths = ["envs/loop_auditor_env/tests"]
